--- a/WPP/style.css
+++ b/WPP/style.css
@@ -1,36 +1,47 @@
-body{
+body {
     background-color: #ffa629;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-#home_page{
+
+a {
+    text-decoration: none;
+    color: #1e1e1e;
+}
+
+#home_page {
     display: block;
 }
-.hamburger_menu{
+
+.hamburger_menu {
     cursor: pointer;
     height: 7vw;
     width: 6vw;
     min-width: 40px;
     min-height: 50px;
     margin-left: 10px;
-    
+
     position: relative;
     display: none;
 }
-.hamburger_menu span{
+
+.hamburger_menu span {
     height: 17%;
     width: 100%;
     background-color: #1e1e1e;
     border-radius: 25px;
-    top:50%;
+    top: 50%;
     position: absolute;
 }
-.hamburger_menu span:nth-child(1){
-    top:25%;
+
+.hamburger_menu span:nth-child(1) {
+    top: 25%;
 }
-.hamburger_menu span:nth-child(3){
-    top:75%;
+
+.hamburger_menu span:nth-child(3) {
+    top: 75%;
 }
-#menu{
+
+#menu {
     width: 100%;
     height: 20%;
     min-width: 210px;
@@ -39,7 +50,7 @@ body{
     display: flex;
 }
 
-.menu_container{
+.menu_container {
     margin: 0;
     width: 20%;
     height: 100%;
@@ -49,23 +60,22 @@ body{
     transition: all ease 0.4s;
 }
 
-#logo_container{
-    margin-right:3vw;
+#logo_container {
+    margin-right: 3vw;
     width: 10%;
     height: 100%;
 }
-#logo{
-    width:65%;
-    padding:2vh;
+
+#logo {
+    width: 65%;
+    padding: 2vh;
 }
-#community_container{
-}
-#shop_container{
-}
-.menu_txt{
+
+.menu_txt {
     padding-top: 12px;
 }
-.arrow_menu{
+
+.arrow_menu {
     padding-top: 20px;
     margin-left: 5px;
     width: 20%;
@@ -73,28 +83,33 @@ body{
     cursor: pointer;
     position: relative;
 }
-.menu_container:hover .arrow_menu{
+
+.menu_container:hover .arrow_menu {
     transition: all ease 0.5s;
-    transform: rotateX(180deg) translateY(-15px);  
+    transform: rotateX(180deg) translateY(-15px);
 }
-.health_menu{
+
+.health_menu {
     padding-top: 20px;
     margin-left: 5px;
     width: 20%;
     min-width: 55px;
 }
-.account_menu{
+
+.account_menu {
     padding-top: 18px;
     margin-left: 5px;
     width: 16%;
     min-width: 35px;
 }
-.menu_container:hover .account_menu, .menu_container:hover .health_menu{
+
+.menu_container:hover .account_menu,
+.menu_container:hover .health_menu {
     transition: all ease 0.5s;
     transform: scale(1.2);
 }
 
-#content_container{
+#content_container {
     display: flex;
     margin-top: 2%;
     margin-left: auto;
@@ -103,25 +118,29 @@ body{
     height: 82vh;
     min-height: 450px;
     min-width: 150px;
-    
+
 }
-#content_first_half{
+
+#content_first_half {
     width: 57%;
     height: 95%;
     margin-right: 2vw;
 }
-#content_second_half{
+
+#content_second_half {
     display: flex;
     width: 43%;
     height: 95%;
-    flex-direction: column;  
+    flex-direction: column;
 }
-.content_element{
+
+.content_element {
     background-color: #1e1e1e;
     border-radius: 10px;
 
 }
-#search_bar{
+
+#search_bar {
     height: 5vh;
     width: 100%;
     border: none;
@@ -129,28 +148,33 @@ body{
     font-size: 3vh;
     margin-bottom: 2%;
 }
-#search_bar::placeholder{
-    text-align:center;
+
+#search_bar::placeholder {
+    text-align: center;
     font-size: 3vh;
     color: white;
 }
-#search_bar:focus{
+
+#search_bar:focus {
     border: 4px solid #ffcd29;
     text-align: center;
 }
-#search_bar:focus::placeholder{
+
+#search_bar:focus::placeholder {
     color: #1e1e1e;
 }
-#main_content{
+
+#main_content {
     width: 100%;
     height: 90%;
     color: white;
     text-align: center;
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
 }
-.main_content_arrow{
+
+.main_content_arrow {
     cursor: pointer;
     transition: all ease 0.4s;
     width: 8%;
@@ -160,18 +184,20 @@ body{
     margin-top: auto;
     margin-bottom: auto;
 }
-.main_content_arrow:hover{
+
+.main_content_arrow:hover {
     transform: scale(1.2);
 }
 
-#tips{
+#tips {
     flex: 1;
     height: 47%;
     color: white;
     text-align: center;
     margin-bottom: 7%;
 }
-#location{
+
+#location {
     flex: 1;
     height: 47%;
     color: white;
@@ -179,29 +205,34 @@ body{
 }
 
 @media only screen and (max-width: 1200px) {
-    .hamburger_menu{
-        display:flex;
+    .hamburger_menu {
+        display: flex;
         position: relative;
         margin-right: 120px;
     }
-    .hamburger_menu.active{
+
+    .hamburger_menu.active {
         position: absolute;
     }
-    #menu.active{
+
+    #menu.active {
         width: 30%;
         height: 96vh;
         border-radius: 10px;
         min-height: 460px;
-        display:flex;
+        display: flex;
         flex-direction: column;
-        }
-     #menu{
-        display: none;
-     }
-    #logo_container{
+    }
+
+    #menu {
         display: none;
     }
-    .menu_container{
+
+    #logo_container {
+        display: none;
+    }
+
+    .menu_container {
         margin-left: 10px;
         margin-bottom: 0;
         margin-top: 30px;
@@ -209,78 +240,167 @@ body{
         height: 10%;
     }
 
-    #menu div:nth-of-type(2){
+    #menu div:nth-of-type(2) {
         margin-top: 70px;
     }
-    #content_container{
-        flex:1;
+
+    #content_container {
+        flex: 1;
         margin-top: 0;
-        
+
         width: 100%;
         height: 100%;
         padding: 10px;
-        display:flex;
-        flex-direction:column;
+        display: flex;
+        flex-direction: column;
     }
-    #content_first_half{
+
+    #content_first_half {
         width: 100%;
         height: 50%;
         margin-right: 2vw;
         display: flex;
         flex-direction: column;
     }
-    #content_second_half{
+
+    #content_second_half {
         margin-top: 20px;
         width: 100%;
         height: 50%;
-        flex-direction: row;  
+        flex-direction: row;
 
     }
-    #tips{
+
+    #tips {
         width: 100%;
-        height: 100%; 
+        height: 100%;
         margin-right: 25px;
     }
-    #location{
+
+    #location {
         width: 100%;
         height: 100%;
     }
-    #home_page{
-        display:flex;
+
+    #home_page {
+        display: flex;
         flex-direction: row;
         width: 100%;
         height: 95vh;
     }
-    .arrow_menu{
+
+    .arrow_menu {
         margin-left: auto;
     }
-    .health_menu{
+
+    .health_menu {
         margin-left: auto;
     }
-    .account_menu{
+
+    .account_menu {
         margin-left: auto;
         margin-right: 5%;
     }
-  }
-  @media only screen and (max-width: 700px) {
-    #content_second_half{
+}
+
+@media only screen and (max-width: 700px) {
+    #content_second_half {
         margin-top: 10px;
         flex-direction: column;
     }
-    #tips{
+
+    #tips {
         width: 100%;
-        height: 100%; 
+        height: 100%;
         margin-bottom: 10px;
     }
-    .arrow_menu{
-        margin-left: auto;
-    }
-    .health_menu{
-        margin-left: auto;
-    }
-    .account_menu{
-        margin-left: auto;
-    }
-  }
 
+    .arrow_menu {
+        margin-left: auto;
+    }
 
+    .health_menu {
+        margin-left: auto;
+    }
+
+    .account_menu {
+        margin-left: auto;
+    }
+}
+
+html, body {
+    padding: 0;
+    margin: 0;
+}
+
+/*==== Ondrej Kacirek ====*/
+.site-wrapper {
+    position: relative;
+    min-width: 100vw;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.center-wrapper {
+    position: absolute; 
+    padding: inherit;  
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.register-wrapper {
+    max-width: 500px;
+    width: 100vw;
+    box-sizing: border-box;
+    padding: 30px;
+}
+
+.register-dialog {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;    
+    background-color: #1e1e1e;
+    color: white;
+    box-sizing: border-box;
+    padding: 4em;
+    border-radius: 15px;
+}
+.register-wrapper h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+.register-dialog input {
+    padding: 5px;
+    height: 40px;
+    border-radius: 16px;
+    outline: none;
+    border: none;
+    background-color: #ffa629;
+    width: 100%;
+    text-align: center;
+    opacity: 100%;
+    font-size: 16px;
+}
+.register-dialog input::placeholder {   
+    text-align: center;
+    opacity: 100%;
+    font-size: 1rem;
+}
+
+.register-dialog button {
+    margin-top: 30px;
+    cursor: pointer;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-radius: 16px;
+    height: 55px;
+    width: 80%;
+    background-color: #ffcd29;
+    font-size: 16px;
+}
